# WarlockSoDSim

./: CMakeLists.txt  README.md  sim_all_builds.sh
src/: actions.cpp  actions.h  combat_log.cpp  combat_log.h  corruption_spell_handler.cpp  effect_interface.cpp  effect_interface.h  effects.cpp  effects.h  event.cpp  event.h  fwds.h  life_tap_spell_handler.cpp  main.cpp  policies.cpp  policies.h  policy_ids.h  shadowbolt_spell_handler.cpp  spell_handler_interface.cpp  spell_handler_interface.h  spell_handlers.cpp  spell_handlers.h  spells.cpp  spells.h  state.cpp  state.h  utils.h
